# todo-list-python-ebac

./: README.rst  pyproject.toml
tests/: test_todo_list_python.py
todo_list_python/: data.json  main.py
